tests/codegen/fail/unsupported_async_generic_main_build.ql
async fn main[T]() -> Int {
    return 0
}
